# dupgrind

./: Cargo.toml  README.md  flake.nix
assets/: missing.xcf
src/: main.rs
templates/: group.html  list.html
