[package]
name = "grind-dups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.11.1" }
axum = { version = "0.6.20", features = ["macros"] }
clap = { version = "4.4.4", features = ["derive"] }
regex = "1.9.5"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["full"] }
