[package]
name = "dupgrind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.11.1" }
axum = { version = "0.6.20", features = ["macros", "headers"] }
clap = { version = "4.4.4", features = ["derive"] }
mime_guess = "2.0.4"
regex = "1.9.5"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.9", features = ["io"] }
tower-http = { version = "0.4.4", features = ["full"] }
